update secuity config